--- a/.github/workflows/linux-build.yml
+++ b/.github/workflows/linux-build.yml
@@ -7,6 +7,8 @@ on:
     branches: [ "master", "devel" ]
   pull_request:
     branches: [ "master", "devel" ]
+  workflow_dispatch:
+    branches: [ "master", "devel" ]
 
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
